infra/k8s/chat/002-riot/002-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: riot
  namespace: matrixorg
spec:
  selector:
    matchLabels:
      app: riot
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: riot
    spec:
      containers:
      - name: riot
        image: avhost/docker-matrix-riot:v1.5.15
        ports:
          - name: web
            containerPort: 8765
        volumeMounts:
          - name: riotim-config
            mountPath: /data
          - name: riotim-config
            mountPath: /app/config.json
            subPath: config.json
      volumes:
        - name: riotim-config
          configMap:
            name: riotim-config
