infra/k8s/chat/002-riot/002-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: riot
  namespace: matrixorg
spec:
  type: ClusterIP
  selector:
    app: riot
  ports:
    # Three types of ports for a service
    # nodePort - a static port assigned on each the node
    # port - port exposed internally in the cluster
    # targetPort - the container port to send requests to
    - protocol: TCP
      port: 8765
      name: web
