infra/k8s/chat/002-riot/003-ingress.yaml
---
kind: IngressRoute
apiVersion: traefik.containo.us/v1alpha1
metadata:
  name: riot
  namespace: matrixorg
spec:
  entryPoints: 
    - websecure
  routes:
  - match: Host(`matrix.frikanalen.no`) 
    kind: Rule
    services:
    - kind: Service
      name: riot
      scheme: http
      port: 8765
  tls:
    certResolver: default
